fix(mode-toggle): update margins, change display to flex, align items center

--- a/frontend/src/app/components/mode-toggle/mode-toggle.dark.component.scss
+++ b/frontend/src/app/components/mode-toggle/mode-toggle.dark.component.scss
@@ -1,12 +1,24 @@
 @import '../../styles/shared.scss';
 
+:host {
+  display: flex;
+  align-items: center;
+}
+
 .mode-toggle.#{$flat-dark-theme-class-name} {
   display: flex;
   flex-direction: row;
   align-items: center;
 
   fa-icon {
-    margin: 0 8px;
     color: $dark-text-color;
+
+    &:first-of-type {
+      margin-right: 8px;
+    }
+
+    &:last-of-type {
+      margin-left: 8px;
+    }
   }
 }
